--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "marked-element": "PolymerElements/marked-element#~1.1.1",
     "page": "visionmedia/page.js#~1.6.3",
     "time-element": "~1.0.1"
   },
