--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,21 @@
   "name": "polymer-starter-kit",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.1.0",
+    "polymer": "Polymer/polymer#^1.2.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
-    "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
+    "paper-menu": "PolymerElements/paper-menu#4fecb43601",
+    "page": "visionmedia/page.js#~1.6.4",
     "marked-element": "PolymerElements/marked-element#~1.1.1",
-    "page": "visionmedia/page.js#~1.6.3",
     "time-element": "~1.0.1"
   },
   "devDependencies": {
-    "web-component-tester": "*",
-    "test-fixture": "PolymerElements/test-fixture#^1.0.0"
+    "web-component-tester": "*"
+  },
+  "ignore": [],
+  "resolutions": {
+    "paper-menu": "4fecb43601"
   }
 }
